fix: remove the 'transition all' that breaks the slider when rolling back to slide 1

--- a/components/Slider/Slider.module.css
+++ b/components/Slider/Slider.module.css
@@ -1,7 +1,6 @@
 .root {
   & > div {
     height: 328px;
-    background-color: skyblue;
   }
 
   & > ul {
