--- a/styles/index.css
+++ b/styles/index.css
@@ -2,10 +2,6 @@
 
 /* Write your own custom base styles here */
 
-* {
-  transition: 0.3s all;
-}
-
 .slick-prev::before,
 .slick-next::before {
   @apply text-gray-900;
